--- a/aboutus.html
+++ b/aboutus.html
@@ -137,8 +137,8 @@
     <nav class="navbar navbar-expand-sm bg-white navbar-light fixed-top"> 
 
   <!-- logo -->
-  <a class="navbar-brand" href="D:\Camellia web\homepage.html">
-    <img src="D:\Camellia web\logo.png" width="87" height="33.3">
+  <a class="navbar-brand" href="index.html">
+    <img src="Camellia web\logo.png" width="87" height="33.3">
 
   </a>
   
@@ -147,16 +147,16 @@
 
   <ul class="navbar-nav ml-auto" style="padding-right: 10px; ">
     <li class="nav-item">
-      <a class="nav-link" style="font-size: 20px;" href="D:\Camellia web\homepage.html">Home</a>
+      <a class="nav-link" style="font-size: 20px;" href="index.html">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" style="font-size: 20px;" href="D:\Camellia web\aboutus.html">About us</a>
+      <a class="nav-link" style="font-size: 20px;" href="aboutus.html">About us</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" style="font-size: 20px;" href="D:\Camellia web\gallery.html">Gallery</a>
+      <a class="nav-link" style="font-size: 20px;" href="gallery.html">Gallery</a>
 
       <li class="nav-item">
-      <a class="nav-link" style="font-size: 20px;" href="D:\Camellia web\contact.html">Contact</a>
+      <a class="nav-link" style="font-size: 20px;" href="#">Contact</a>
   </li>
 
 
@@ -191,7 +191,7 @@
 
 
     <div class="col"> <!--my column tag-->
-       <img src="D:\Camellia web\aboutus.jpg".code image/vc2jpg class="rounded" width="500" height="500"></div>
+       <img src="Camellia web\aboutus.jpg".code image/vc2jpg class="rounded" width="500" height="500"></div>
        <div class="col"><!--my col2 tag-->
         <p style="font-weight: roboto;color: black; font-size: 18px;"> Surely we have all encountered small troubles in our daily lives from the fact that the bag of clothes is overloaded by many items to the loss of keys, headphones, and phones in the backpack itself. , bags that we put in a mess. But then we gradually take it as a habit and live with these "small" problems... <br><br> With the message "More than Simplicity", Camelia devotes herself to making her products. Not only is the simplicity in the exterior design helping users to spend less time thinking about choosing the right clothes, but the interior design of each product is taken care of and streamlined to create a Convenient and tidy for users. <br><br> Let's experience and feel the change of yourself with Camelia! </p>
 
@@ -206,7 +206,7 @@
  <div class="row">
   <div class="column">
     <div class="card">
-      <img src="D:\Camellia web\potrait1.jpg" alt="Jane" style="width:100%">
+      <img src="Camellia web\potrait1.jpg" alt="Jane" style="width:100%">
       <div class="container">
         <h2>Viet Dung</h2>
         <p class="title">CEO &amp; Founder</p>
@@ -219,7 +219,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="D:\Camellia web\potrait3.jpg" alt="Mike" style="width:100%">
+      <img src="Camellia web\potrait3.jpg" alt="Mike" style="width:100%">
       <div class="container">
         <h2>Van An</h2>
         <p class="title">UI UX Designer</p>
@@ -232,7 +232,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="D:\Camellia web\potrait 2.jpg" alt="John" style="width:100%">
+      <img src="Camellia web\potrait 2.jpg" alt="John" style="width:100%">
       <div class="container">
         <h2>Charlie Jonas</h2>
         <p class="title">Developer</p>
@@ -255,13 +255,13 @@
   <h2 style="text-align: left; font-size: 30px; color: black"> Responsive</h2>
   
   <div class="container2">
-  <img src="D:\Camellia web\potrait4.jpg" alt="Avatar" style="width:90px">
+  <img src="Camellia web\potrait4.jpg" alt="Avatar" style="width:90px">
   <p><span>Chris Fox.</span> Top fan</p>
   <p>Send virtual hug to Camelia. The best minimalist style</p>
 </div>
 
 <div class="container2">
-  <img src="D:\Camellia web\potrait5.jpg" alt="Avatar" style="width:90px">
+  <img src="Camellia web\potrait5.jpg" alt="Avatar" style="width:90px">
   <p><span >Tung Anh.</span> Top fan</p>
   <p>Simple but not simple</p>
 </div>
