--- a/gallery.html
+++ b/gallery.html
@@ -90,8 +90,8 @@ body {
   	<nav class="navbar navbar-expand-sm bg-white navbar-light fixed-top"> 
 
   <!-- logo -->
-  <a class="navbar-brand" href="D:\Camellia web\homepage.html">
-  	<img src="D:\Camellia web\logo.png" width="87" height="33.3">
+  <a class="navbar-brand" href="index.html">
+  	<img src="Camellia web\logo.png" width="87" height="33.3">
 
   </a>
   
@@ -100,16 +100,16 @@ body {
 
   <ul class="navbar-nav ml-auto" style="padding-right: 10px; ">
     <li class="nav-item">
-      <a class="nav-link" style="font-size: 20px;" href="D:\Camellia web\homepage.html">Home</a>
+      <a class="nav-link" style="font-size: 20px;" href="index.html">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" style="font-size: 20px;" href="D:\Camellia web\aboutus.html">About us</a>
+      <a class="nav-link" style="font-size: 20px;" href="aboutus.html">About us</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" style="font-size: 20px;" href="D:\Camellia web\gallery.html">Gallery</a>
+      <a class="nav-link" style="font-size: 20px;" href="gallery.html">Gallery</a>
 
       <li class="nav-item">
-      <a class="nav-link" style="font-size: 20px;" href="D:\Camellia web\contact.html">Contact</a>
+      <a class="nav-link" style="font-size: 20px;" href="#">Contact</a>
   </li>
 
 
@@ -142,38 +142,38 @@ body {
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <img src="D:\Camellia web\gallery\1 (1).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (2).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (3).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (4).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (5).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (6).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (7).jpg" style="width:100%">
+    <img src="gallery\1 (1).jpg" style="width:100%">
+    <img src="gallery\1 (2).jpg" style="width:100%">
+    <img src="gallery\1 (3).jpg" style="width:100%">
+    <img src="gallery\1 (4).jpg" style="width:100%">
+    <img src="gallery\1 (5).jpg" style="width:100%">
+    <img src="gallery\1 (6).jpg" style="width:100%">
+    <img src="gallery\1 (7).jpg" style="width:100%">
   </div>
   <div class="column">
-    <img src="D:\Camellia web\gallery\1 (8).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (9).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (10).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (11).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (12).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (13).jpg" style="width:100%">
+    <img src="gallery\1 (8).jpg" style="width:100%">
+    <img src="gallery\1 (9).jpg" style="width:100%">
+    <img src="gallery\1 (10).jpg" style="width:100%">
+    <img src="gallery\1 (11).jpg" style="width:100%">
+    <img src="gallery\1 (12).jpg" style="width:100%">
+    <img src="gallery\1 (13).jpg" style="width:100%">
   </div>  
   <div class="column">
-    <img src="D:\Camellia web\gallery\1 (14).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (15).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (16).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (17).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (1).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (2).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (3).jpg" style="width:100%">
+    <img src="gallery\1 (14).jpg" style="width:100%">
+    <img src="gallery\1 (15).jpg" style="width:100%">
+    <img src="gallery\1 (16).jpg" style="width:100%">
+    <img src="gallery\1 (17).jpg" style="width:100%">
+    <img src="gallery\1 (1).jpg" style="width:100%">
+    <img src="gallery\1 (2).jpg" style="width:100%">
+    <img src="gallery\1 (3).jpg" style="width:100%">
   </div>
   <div class="column">
-    <img src="D:\Camellia web\gallery\1 (4).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (5).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (6).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (7).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (8).jpg" style="width:100%">
-    <img src="D:\Camellia web\gallery\1 (9).jpg" style="width:100%">
+    <img src="gallery\1 (4).jpg" style="width:100%">
+    <img src="gallery\1 (5).jpg" style="width:100%">
+    <img src="gallery\1 (6).jpg" style="width:100%">
+    <img src="gallery\1 (7).jpg" style="width:100%">
+    <img src="gallery\1 (8).jpg" style="width:100%">
+    <img src="gallery\1 (9).jpg" style="width:100%">
   </div>
 </div>
 
